--- a/ComicViewer/package.json
+++ b/ComicViewer/package.json
@@ -33,11 +33,11 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^17.3.17",
-    "@angular-eslint/builder": "16.0.2",
-    "@angular-eslint/eslint-plugin": "16.0.2",
-    "@angular-eslint/eslint-plugin-template": "16.0.2",
-    "@angular-eslint/schematics": "16.0.2",
-    "@angular-eslint/template-parser": "16.0.2",
+    "@angular-eslint/builder": "^17.5.3",
+    "@angular-eslint/eslint-plugin": "^17.5.3",
+    "@angular-eslint/eslint-plugin-template": "^17.5.3",
+    "@angular-eslint/schematics": "^17.5.3",
+    "@angular-eslint/template-parser": "^17.5.3",
     "@angular/cli": "^17.3.17",
     "@angular/language-service": "^17.3.12",
     "@types/jasmine": "~4.3.1",
