--- a/ComicViewer/package.json
+++ b/ComicViewer/package.json
@@ -26,9 +26,9 @@
     "@angular/platform-browser": "^18.2.13",
     "@angular/platform-browser-dynamic": "^18.2.13",
     "@angular/router": "^18.2.13",
-    "core-js": "^3.30.2",
-    "rxjs": "~7.8.1",
-    "tslib": "^2.5.2",
+    "core-js": "^3.42.0",
+    "rxjs": "^7.8.2",
+    "tslib": "^2.8.1",
     "zone.js": "~0.14.10"
   },
   "devDependencies": {
@@ -40,19 +40,19 @@
     "@angular-eslint/template-parser": "^18.4.3",
     "@angular/cli": "^18.2.19",
     "@angular/language-service": "^18.2.13",
-    "@types/jasmine": "~4.3.1",
+    "@types/jasmine": "^5.1.8",
     "@types/jasminewd2": "~2.0.10",
-    "@types/node": "~20.2.3",
-    "@typescript-eslint/eslint-plugin": "^5.59.7",
-    "@typescript-eslint/parser": "^5.59.7",
-    "eslint": "^8.41.0",
-    "jasmine-core": "~5.0.0",
-    "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.4.2",
-    "karma-chrome-launcher": "~3.2.0",
-    "karma-coverage-istanbul-reporter": "~3.0.3",
-    "karma-jasmine": "~5.1.0",
-    "ts-node": "~10.9.1",
+    "@types/node": "^22.15.17",
+    "@typescript-eslint/eslint-plugin": "^8.32.0",
+    "@typescript-eslint/parser": "^8.32.0",
+    "eslint": "^9.26.0",
+    "jasmine-core": "^5.7.1",
+    "jasmine-spec-reporter": "^7.0.0",
+    "karma": "^6.4.4",
+    "karma-chrome-launcher": "^3.2.0",
+    "karma-coverage-istanbul-reporter": "^3.0.3",
+    "karma-jasmine": "^5.1.0",
+    "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
   "packageManager": "yarn@3.2.1"
