--- a/ComicViewer/package.json
+++ b/ComicViewer/package.json
@@ -9,8 +9,11 @@
     "lint": "ng lint",
     "e2e": "ng e2e",
     "buildProd": "ng build --configuration production",
-    "buildDev": "ng build",
-    "buildWatch": "ng build --watch=true"
+    "buildDev": "ng build --configuration development",
+    "buildWatch": "ng build --watch=true",
+    "analyze": "ng build --stats-json && webpack-bundle-analyzer dist/ComicViewer/stats.json",
+    "prerender": "ng run ComicViewer:prerender",
+    "postinstall": "ngcc --properties es2020 browser module main"
   },
   "private": true,
   "dependencies": {
@@ -53,7 +56,8 @@
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
     "ts-node": "^10.9.2",
-    "typescript": "^5.4.5"
+    "typescript": "^5.4.5",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "packageManager": "yarn@3.2.1"
 }
