--- a/ComicViewer/package.json
+++ b/ComicViewer/package.json
@@ -6,6 +6,8 @@
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
+    "test:headless": "ng test --browsers=ChromeHeadless --watch=false",
+    "test:ci": "ng test --browsers=ChromeHeadlessCI --watch=false --code-coverage",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "buildProd": "ng build --configuration production",
@@ -55,6 +57,7 @@
     "karma-chrome-launcher": "^3.2.0",
     "karma-coverage-istanbul-reporter": "^3.0.3",
     "karma-jasmine": "^5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5",
     "webpack-bundle-analyzer": "^4.10.2"
