--- a/ComicAPI/build.gradle
+++ b/ComicAPI/build.gradle
@@ -51,8 +51,15 @@ dependencies {
 	implementation 'com.google.code.gson:gson:2.11.0'
 	implementation 'com.google.guava:guava:33.4.6-jre'
 	implementation 'org.jsoup:jsoup:1.18.1'
+	
+	// OpenAPI documentation
 	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.4.0'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter-validation' // Add validation starter
+	
+	// Fix version incompatibility issues
+	implementation 'com.fasterxml.jackson.core:jackson-databind:2.16.1'
+	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.16.1'
 
 	// Security dependencies
 	implementation 'org.springframework.boot:spring-boot-starter-security'
