--- a/ComicAPI/src/integration/resources/application-integration.properties
+++ b/ComicAPI/src/integration/resources/application-integration.properties
@@ -15,13 +15,15 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # Cache properties for integration tests
-cache.location=/Users/agilbert/kkdad/ComicCacher/ComicAPI/integration-cache
-cache.config=/Users/agilbert/kkdad/ComicCacher/ComicAPI/integration-cache/integration-comics.json
-cache.users.config=/Users/agilbert/kkdad/ComicCacher/ComicAPI/integration-cache/integration-users.json
-cache.preferences.config=/Users/agilbert/kkdad/ComicCacher/ComicAPI/integration-cache/integration-preferences.json
+comics.cache.location=./integration-cache
+comics.cache.config=comics.json
+comics.cache.usersConfig=users.json
+comics.cache.preferencesConfig=preferences.json
+comics.bootstrap.config=bootstrap.json
 
 # Disable scheduled tasks in tests
 daily.runner.enabled=false
+startup.reconciler.enabled=false
 
 # Server properties - use random port for tests
 server.port=0
