--- a/ComicAPI/src/test/resources/application-test.properties
+++ b/ComicAPI/src/test/resources/application-test.properties
@@ -17,10 +17,10 @@ spring.datasource.password=password
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # Cache properties for testing
-cache.location=./test-cache
-cache.config=./test-comics.json
-cache.users.config=./test-users.json
-cache.preferences.config=./test-preferences.json
+comics.cache.location=./test-cache
+comics.cache.config=./test-comics.json
+comics.cache.usersConfig=./test-users.json
+comics.cache.preferencesConfig=./test-preferences.json
 
 # Disable scheduled tasks in tests
 daily.runner.enabled=false
